[package]
name = "zsteg-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "bmp"] }
png = "0.17"
flate2 = { version = "1.0", features = ["zlib"] }
colored = "2.1"
regex = "1.10"
byteorder = "1.5"
